--- a/css/style.css
+++ b/css/style.css
@@ -192,8 +192,14 @@ body {
 }
 .header-area .logo {
     width: 300px;
-    padding: 15px;
+    /*padding: 15px;*/
+    padding: 0;
     font-weight: bold;
+}
+.header-area .logo img{
+    filter: brightness(0) invert(1);
+    width: 150px;
+    height: 55px;
 }
 .header-area .links-container {
     width: 100%;
@@ -663,15 +669,36 @@ button{
 }
 
 .forevision-whyUs{
+    position: relative;
+    top: -20px;
     background-image: url('../images/w-qjCHPZbeXCQ-unsplash.jpg');
-    height: 400px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .forevision-whyUs-inner{
+    position: relative;
+    left: -50%;
     width: 50%;
     height: 100%;
-    background-color: #fff;
+    background-color: rgb(255 255 255 / 90%);
+    transition: left .7s ease-in-out;
 }
-
+.forevision-whyUs-inner.active{
+    left: 0;
+} 
+.forevision-whyUs-inner h2{
+    text-align: center;
+    color: hsl(214deg 13% 24%);
+    font-weight: bold;
+    padding-top: 35px;
+}
+.forevision-whyUs-inner p{
+    color: hsl(214deg 13% 24% / 75%);
+    padding: 5px 50px 30px 50px;
+    line-height: 19px;
+    font-size: 13px;
+    text-align: center;
+}
 .forsision-posts{
     text-align: center;
     background-color: hsl(0, 0%, 90%);
