--- a/css/style.css
+++ b/css/style.css
@@ -313,9 +313,9 @@ body {
 }
 .apartments-head{
     text-align: center;
-    color: hsl(214deg 13% 24%);
     font-weight: bold;
     margin-top: 35px;
+    color: var(--main-color);
 }
 .apartment{
     width: 350px;
@@ -609,9 +609,6 @@ button{
 
 
 
-
-
-
 .containerMargin{
     margin: 0 80px;
 }
@@ -688,9 +685,9 @@ button{
 } 
 .forevision-whyUs-inner h2{
     text-align: center;
-    color: hsl(214deg 13% 24%);
     font-weight: bold;
     padding-top: 35px;
+    color: var(--main-color);
 }
 .forevision-whyUs-inner p{
     color: hsl(214deg 13% 24% / 75%);
