--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,7 @@ body {
     color: var(--main-color);
 }
 .introduction-text p {
+    padding: 0 30px;
     line-height: 1.6;
     font-size: 20px;
     margin: 0;
@@ -371,7 +372,7 @@ body {
     line-height: 18px;
     font-size: 11px;
 }
-button{
+.apartment-text button{
     border: 0;
     background-color: #fff;
     padding: 15px;
@@ -749,7 +750,7 @@ button{
     transition: 0.7s;
     color: #fff;
 }
-
+/*
 i {
     position: absolute;
     top: 50%;
@@ -759,7 +760,7 @@ i {
     transition: 0.7s;
     color: #fff;
 }
-
+*/
 .container .card .face {
     width: 300px;
     height: 200px;
